# JobFinder

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
data/: skill_inventory.json  startup_watchlist.yaml  uk_postcode_areas.json
data/chroma_db_test/: chroma.sqlite3
data/data_bank/: projects.tex
data/master_cvs/: ML_engineer.tex  ai_engineer.tex  data_scientist.tex
scripts/: extract_skill_inventory.py  generate_carousel.py  generate_report.py  market_report.py  run_pipeline.py
scripts/carousel/: slides.py
src/jobforge/agents/: base.py  orchestrator.py
src/jobforge/agents/dispatcher/: agent.py
src/jobforge/agents/matchmaker/: agent.py
src/jobforge/agents/scout/: agent.py  planner.py
src/jobforge/agents/tailor/: agent.py
src/jobforge/analytics/: market_analyzer.py  role_classifier.py  trends.py  validation.py
src/jobforge/config/: settings.py
src/jobforge/config/prompts/: matchmaker.py  tailor.py
src/jobforge/connectors/: adzuna.py  base.py  career_pages.py  funding_news.py  greenhouse_lever.py  hn_who_is_hiring.py  indeed_proxy.py  linkedin_proxy.py  recruiter_boards.py  reed.py  sponsor_register.py  uk_gov_find_a_job.py  wellfound.py
src/jobforge/memory/: dedup_store.py  rag_store.py
src/jobforge/ml/: __init__.py  prescreen.py
src/jobforge/models/: cv.py  job.py  report.py  scoring.py  state.py
src/jobforge/utils/: cost_tracker.py  geography.py  logger.py  salary_parser.py
tests/: conftest.py  test_dedup_store.py  test_generate_carousel.py  test_geography.py  test_market_analyzer.py  test_report.py  test_role_classifier.py  test_salary_parser.py  test_scout.py  test_trends.py  test_validation.py
tests/test_connectors/: test_hn_who_is_hiring.py  test_sponsor_register.py  test_uk_gov_find_a_job.py
